Fix z-index issues

--- a/src/index.scss
+++ b/src/index.scss
@@ -70,7 +70,7 @@ body {
   position: sticky;
   top: 0;
   box-shadow: $box-shadow;
-  // z-index: 10;
+  z-index: 1;
   .header-name {
     font-family: "Radio Canada";
     font-size: 1.8rem;
@@ -111,7 +111,7 @@ main {
   flex-basis: 5rem;
   flex-grow: 1;
   flex-shrink: 0;
-  z-index: -1;
+  // z-index: -1;
   transition: 250ms $timing-function;
   .sidebar-list {
     display: flex;
@@ -231,7 +231,7 @@ main {
   width: 100%;
   background-color: $dark;
   position: absolute;
-  z-index: -1;
+  z-index: 0;
 
   transform: translateY(-120%);
   transition: transform 500ms $timing-function 400ms;
@@ -298,13 +298,13 @@ main {
         }
         ul {
           li {
-            // margin-bottom: 12px;
+            margin-bottom: 2rem;
             list-style: none;
           }
         }
         p {
           font-family: "Radio Canada";
-          margin-bottom: 1rem;
+          margin-bottom: 2rem;
           line-height: 28px;
           width: 100%;
         }
